syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.api";

package demo;

service EchoStringService {
    rpc echoString(EchoStringRequest) returns (EchoStringResponse) {}
}

message EchoStringRequest {
    string requestStr = 1;
}

message EchoStringResponse {
    string responseStr = 1;
}